--- a/MKShopStyle.css
+++ b/MKShopStyle.css
@@ -1,6 +1,8 @@
 * { font-family: 'Roboto', sans-serif;}
 *:focus { outline: 0 !important;}
 
+a { text-decoration: none !important; }
+
 .body { 
 	overflow-y: scroll;
 	overflow-x: hidden;
@@ -381,59 +383,171 @@ h5 {
 	position: fixed; /* Stay in place */
   	z-index: 7; /* Sit on top */
  	padding-top: 20px; /* Location of the box */
-  	left: 160px;
-  	top: 45px;
-  	width: 1030px;
-  	height: 550px;
+  	left: 0;
+  	right: 0;
+  	
+  	top: 3vw;
   	background-color: whitesmoke;
   	border-radius: 5px;
   	border: solid 3px #77746a;
 }
+#imageSide {
+	width: 90%;
+}
+#infoSide {
+	padding-right: 30px;
+}
+
+
+@media only screen and (min-width: 500px) {
+	#itemInfoCont {
+		height: 61vw;
+	}
+	#itemTitle {
+		font-size: 26px;
+	}
+	#itemMaterials {
+		padding-top: 5px;
+		font-size: 14px;
+		line-height: 15px;
+		color: dimgrey;
+	}
+	#itemPrice{
+		font-size: 24px;
+		font-weight: bold;
+		font-family: Roboto;
+		letter-spacing: 1px;
+		line-height: 15px;
+		padding-top: 2px;
+	}
+	#itemBigImage {
+		background-color: none;
+		height: 340px;
+		padding-top: 10px;
+	}
+	#itemSmallImages {
+		text-align: center;
+		padding-top: 5vw;
+		width: 360px;
+		margin: auto;
+	}
+	#bigImage {
+		padding-top: 0px;
+		width: 340px;
+		height: 340px;
+		border-radius: 2px;
+		box-shadow: 2px 2px 3px #77746a;
+		margin: auto;
+	}
+	#smallImage {
+		width: 66px;
+		border-radius: 2px;
+		margin: 5px;
+		box-shadow: 2px 2px 3px #77746a;
+	}
+	#size {
+		font-size: 13px;
+	}
+	#care {
+		font-size: 13px;
+		padding-bottom: 10px;
+	}
+	#itemDescript {
+		font-size: 13px;
+	}
+	#closeShopCol {
+		text-align: center;
+		padding-top: 20px;
+	}
+	#closeShop {
+		height: 50px;
+	}
+	#toEtsy {
+		height: 50px;
+	}
+}
+
+@media only screen and (min-width: 1000px) {
+	#itemInfoCont {
+		height: 550px;
+		overflow-y: scroll;
+	}
+	#itemTitle {
+		font-size: 34px;
+	}
+	#itemMaterials {
+		padding-top: 10px;
+		font-size: 16px;
+		line-height: 20px;
+		color: dimgrey;
+	}
+	#itemPrice{
+		font-size: 28px;
+		font-weight: bold;
+		font-family: Roboto;
+		letter-spacing: 1px;
+		line-height: 30px;
+		padding-top: 4px;
+	}
+	#itemBigImage {
+		background-color: none;
+		height: 340px;
+	}
+	#itemSmallImages {
+		text-align: center;
+		padding-top: 20px;
+		width: 540px;
+	}
+	#bigImage {
+		padding-top: 0px;
+		width: 340px;
+		height: 340px;
+		border-radius: 2px;
+		box-shadow: 2px 2px 3px #77746a;
+	}
+	#smallImage {
+		width:90px;
+		border-radius: 2px;
+		margin: 8px;
+		box-shadow: 2px 2px 3px #77746a;
+	}
+	#size {
+		font-size: 14px;
+	}
+	#care {
+		font-size: 14px;
+		padding-bottom: 10px;
+	}
+	#itemDescript {
+		font-size: 14px;
+	}
+	#closeShopCol {
+		text-align: center;
+		padding-top: 5px;
+	}
+	#closeShop {
+		height: 40px;
+	}
+	#toEtsy {
+		height: 40px;
+	}
+}
+
 #itemTitle {
 	letter-spacing: 3px;
 	font-family: Raleway;
 	font-weight: bold;
-	font-size: 34px;
 	color: #2b3d48;
 	padding-top: 20px;
 	padding-bottom: 2px;
 	border-radius: 2px;
 	line-height: 5px;
 }
-#itemPrice{
-	font-size: 28px;
-	font-weight: bold;
-	font-family: Roboto;
-	letter-spacing: 1px;
-	line-height: 30px;
-	padding-top: 4px;
-}
-#itemMaterials {
-	padding-top: 10px;
-	font-size: 16px;
-	line-height: 20px;
-	color: dimgrey;
-}
-#itemDescript {
-	font-size: 14px;
 
-}
-#size {
-	font-size: 14px;
-}
-#care {
-	font-size: 14px;
-	padding-bottom: 10px;
-}
-#closeShopCol {
-	text-align: center;
-	padding-top: 15px;
-}
 #closeShop {
 	background-color: #77746a;
 	border: solid 2px #77746a;
 	width: 100%;
-	height: 40px;
 	letter-spacing: 3px;
 	font-size: 20px;
 	font-family: Raleway;
@@ -453,7 +567,6 @@ h5 {
 	color:white;
 	border: solid 2px whitesmoke;
 	width: 140px;
-	height: 40px;
 	transition: 0.6s;
 	font-family: Raleway;
 	border-radius: 3px;
@@ -466,28 +579,7 @@ h5 {
 	cursor: pointer;
 	font-weight: bold;
 }
-#itemSmallImages {
-	text-align: center;
-	padding-top: 10px;
-	width: 540px;
-}
-#itemBigImage {
-	background-color: none;
-	height: 340px;
-}
-#bigImage {
-	padding-top: 0px;
-	width: 340px;
-	height: 340px;
-	border-radius: 2px;
-	box-shadow: 2px 2px 3px #77746a;
-}
-#smallImage {
-	width:90px;
-	border-radius: 2px;
-	margin: 4px;
-	box-shadow: 2px 2px 3px #77746a;
-}
+
 #smallImage:hover {
 	cursor: pointer;
 	opacity: 0.8;
@@ -624,7 +716,7 @@ h5 {
   height: 488px;
 }
 .modal-content p {
-	padding-left: 120px;
+	padding-left: 10vw;
 	font-size: 14px;
 }
 .modal-content h1 {
