--- a/indexStyle.css
+++ b/indexStyle.css
@@ -4,41 +4,32 @@ body {
 }
 
 #backgroundImage {
-	background-image: url('./img/home.jpg');
+	background-image: url('./img/home1.jpg');
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-	-webkit-animation: bk 2.5s ease-in;
+
 
 }
 *:focus { outline: 0 !important;}
 
-@-webkit-keyframes bk {
-    0% { opacity: 0;}
-    100% { opacity: 1;}
-}
-
-#logo {
-	-webkit-animation: logo 2.5s ease-in;
-}
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 500px) {
 	#backgroundImage {
-		background-position: 40% 65%;
+		background-position: 40% 45%;
 		height: 1500px;
 	}
 	#logo {
-		padding-left: 2.5vw;
-		padding-top: 8vw;
-		width: 45vw;
+		padding-left: 2vw;
+		padding-top: 10vw;
+		width: 57vw;
 	}
 	#button {
-		padding-left: 6vw;
-		padding-top: 12vw;
+		padding-left: 13vw;
+		padding-top: 6vw;
 	}
 	.btn1 {
-		height: 8.5vw;
-		width: 25vw;
-		font-size: 2.1em;
+		height: 10vw;
+		width: 34vw;
+		font-size: 1.2em;
 	}
 	#homeSocial {
 		display: none;
@@ -47,33 +38,29 @@ body {
 
 @media only screen and (min-width: 1000px) {
 	#backgroundImage {
-		background-position: 40% 50%;
+		background-position: 1% 50%;
 	}
 	#logo {
 		padding-left: 2vw;
-		padding-top: 3vw;
-		width: 30vw;
+		padding-top: 2vw;
+		width: 33vw;
 	}
 	#button {
-		padding-left: 4vw;
-		padding-top: 18vw;
+		padding-left: 3.5vw;
+		padding-top: 20.4vw;
 	}
 	.btn1 {
-		height: 3.5vw;
+		height: 4vw;
 		width: 14vw;
 		font-size: 1.3em;
 	}
 	#homeSocial {
-		padding-top: 4vw;
-		padding-left: 5vw;
+		padding-top: 2.5vw;
+		padding-left: 4vw;
 		display: inline-block;
 	}
 }
 
-@-webkit-keyframes logo {
-    0% { opacity: 0;}
-    100% { opacity: 1;}
-}
 
 .btn1 {
   	background: rgba(0,0,0,.5);
@@ -87,7 +74,7 @@ body {
 	border-radius: 3px;
 	margin:auto;
 	font-family: 'Hammersmith One';
-	-webkit-animation: button 2.5s ease-in;
+
 }
 .btn1:hover {
   	box-shadow: inset 0 100px WhiteSmoke;
@@ -95,19 +82,13 @@ body {
   	border: rgba(255,255,255,1) 2px solid;
   	font-weight: bold;
 }
-@-webkit-keyframes button {
-    0% { opacity: 0;}
-    100% { opacity: 1;}
-}
+
 
 #socialIcons {
-	-webkit-animation: smooth 1s ease-in;
+	
 	opacity: 0.7;
 }
-@-webkit-keyframes smooth {
-    0% { opacity: 0;}
-    100% { opacity: 0.8;}
-}
+
 #socialIcons:hover{
 	transition: 0.6s;
 	transform: translatey(-2px);
