--- a/MKShopStyle.css
+++ b/MKShopStyle.css
@@ -452,10 +452,14 @@ h5 {
 	#size {
 		font-size: 18px;
 	}
-	#care {
+	#careSmall {
+		display: inline-block;
 		font-size: 16px;
 		padding-bottom: 5px;
 		margin-left: 15px;
+	}
+	#careLarge{
+		display: none;
 	}
 	#itemDescript {
 		font-size: 17px;
@@ -479,7 +483,7 @@ h5 {
 
 @media only screen and (min-width: 1000px) {
 	#itemInfoCont {
-		height: 570px;
+		height: 590px;
 		overflow-y: scroll;
 		top: 3vw;
 	}
@@ -526,7 +530,11 @@ h5 {
 	#size {
 		font-size: 14px;
 	}
-	#care {
+	#careSmall {
+		display: none;
+	}
+	#careLarge {
+		display: inline-block;
 		font-size: 14px;
 		padding-bottom: 5px;
 	}
@@ -535,7 +543,7 @@ h5 {
 	}
 	#closeShopCol {
 		text-align: center;
-		padding-top: 9px;
+		padding-top: 5px;
 	}
 	#closeShop {
 		height: 40px;
