--- a/indexStyle.css
+++ b/indexStyle.css
@@ -38,7 +38,7 @@ body {
 
 @media only screen and (min-width: 1000px) {
 	#backgroundImage {
-		background-position: 20% 50%;
+		height: 100%;
 	}
 	#logo {
 		padding-left: 2vw;
