--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,20 +1,23 @@
 body {
 		background-color: black;
 		overflow: hidden;
+		background-attachment: fixed;
+		background-repeat: no-repeat;
 }
 
 #backgroundImage {
-	background-image: url('./img/home1.jpg');
-	background-attachment: fixed;
-	background-repeat: no-repeat;
+	
 
 
 }
 *:focus { outline: 0 !important;}
 
 @media only screen and (min-width: 500px) {
+	body {
+		background-image: url('./img/home1.jpg');
+	}
 	#backgroundImage {
-		background-position: 30% 100%;
+		background-position: 30% 10%;
 		height: 100%;
 		height: 2600px;
 	}
@@ -38,6 +41,9 @@ body {
 }
 
 @media only screen and (min-width: 1000px) {
+	body {
+		background-image: url('./img/home2.jpg');
+	}
 	#backgroundImage {
 		background-position: 20% 50%;
 		height: 4000px;
