--- a/MKAboutStyle.css
+++ b/MKAboutStyle.css
@@ -551,7 +551,7 @@ h4 {
 
 /*--MOBILE NAV--MOBILE NAV--MOBILE NAV--MOBILE NAV--MOBILE NAV--MOBILE NAV--MOBILE NAV--MOBILE NAV--*/
 nav {
-    background: white;
+    background: WhiteSmoke;
     color: #1d1f20;
     left: 0;
     position: relative;
@@ -624,7 +624,7 @@ nav input[type=checkbox]:checked + label #menu-icon:after {
 /*** MENU ***/
 /* Overlay */
 nav input:checked ~ #overlay {
-    background: #F2F3EB;
+    background: WhiteSmoke;
     bottom: 0;
     left: 0;
     height: 100vh;
