--- a/MKAboutStyle.css
+++ b/MKAboutStyle.css
@@ -1,7 +1,8 @@
 * { font-family: 'Roboto', sans-serif;}
 *:focus { outline: 0 !important;}
 
-.body { overflow-y: scroll; }
+.body { overflow-y: scroll; 
+background-color: WhiteSmoke;}
 
 a { color: goldenrod;
 	text-decoration: none !important; }
