--- a/MKShopStyle.css
+++ b/MKShopStyle.css
@@ -807,7 +807,7 @@ nav label {
     padding: 1vw;
     font-weight: bold;
     line-height: 15px;
-    margin-top: 1em;
+    padding-top: 1em;
     margin-bottom: 0.8em;
 }
 /* Hamburger Icon */
