--- a/MKShopStyle.css
+++ b/MKShopStyle.css
@@ -170,7 +170,7 @@ h5 {
 	overflow: hidden;
 }
 #learnMoreBox {
-	background-color: #F2F3EB;
+	background-color: whitesmoke;
 	width: 660px;
 	text-align: center;
 	margin: auto;
