--- a/MKPortfolioStyle.css
+++ b/MKPortfolioStyle.css
@@ -183,7 +183,7 @@ h6 {
 	overflow: hidden;
 }
 #learnMoreBox {
-	background-color: #F2F3EB;
+	background-color: whitesmoke;
 	width: 660px;
 	text-align: center;
 	margin: auto;
